[gd_scene load_steps=8 format=3 uid="uid://drdiu2t881jyt"]

[ext_resource type="PackedScene" uid="uid://b5afhyldsq2xg" path="res://scenes/pattern_input.tscn" id="1_b5gl5"]
[ext_resource type="Script" path="res://scripts/rule_editor.gd" id="1_eflva"]
[ext_resource type="StyleBox" uid="uid://c4higkyqc0n2f" path="res://styles/red_button.tres" id="2_3jw2m"]
[ext_resource type="Resource" uid="uid://p0giqu8c211l" path="res://resources/test_ruleset.tres" id="2_vh0im"]
[ext_resource type="PackedScene" uid="uid://dpx080csyd7fn" path="res://scenes/condition_editor.tscn" id="3_3fiha"]
[ext_resource type="StyleBox" uid="uid://cpq2tagx7jlgd" path="res://styles/red_button_hover.tres" id="3_pldu7"]
[ext_resource type="StyleBox" uid="uid://v4drwcklu7l7" path="res://styles/red_button_pressed.tres" id="4_f7oyp"]

[node name="RuleEditor" type="PanelContainer"]
offset_right = 580.0
offset_bottom = 170.0
script = ExtResource("1_eflva")
ruleset = ExtResource("2_vh0im")
condition_editor_scene = ExtResource("3_3fiha")

[node name="Margins" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="SurroundingContainer" type="HBoxContainer" parent="Margins"]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="Margins/SurroundingContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("2_3jw2m")
theme_override_styles/hover = ExtResource("3_pldu7")
theme_override_styles/pressed = ExtResource("4_f7oyp")
text = " - "

[node name="MainContainer" type="VBoxContainer" parent="Margins/SurroundingContainer"]
layout_mode = 2

[node name="Definition" type="HBoxContainer" parent="Margins/SurroundingContainer/MainContainer"]
layout_mode = 2

[node name="InputPattern" parent="Margins/SurroundingContainer/MainContainer/Definition" instance=ExtResource("1_b5gl5")]
layout_mode = 2
size_flags_horizontal = 3
default_text = "Anything"
can_invert = true

[node name="Label" type="Label" parent="Margins/SurroundingContainer/MainContainer/Definition"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = " => "

[node name="OutputPattern" parent="Margins/SurroundingContainer/MainContainer/Definition" instance=ExtResource("1_b5gl5")]
layout_mode = 2
size_flags_horizontal = 3
default_text = "Itself"

[node name="Conditions" type="PanelContainer" parent="Margins/SurroundingContainer/MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ConditionContainer" type="VBoxContainer" parent="Margins/SurroundingContainer/MainContainer/Conditions"]
layout_mode = 2
size_flags_vertical = 3

[node name="AddContainer" type="VBoxContainer" parent="Margins/SurroundingContainer/MainContainer/Conditions/ConditionContainer"]
layout_mode = 2

[node name="AddConditionButton" type="Button" parent="Margins/SurroundingContainer/MainContainer/Conditions/ConditionContainer/AddContainer"]
layout_mode = 2
text = "Add Condition..."

[connection signal="pressed" from="Margins/SurroundingContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="Margins/SurroundingContainer/MainContainer/Conditions/ConditionContainer/AddContainer/AddConditionButton" to="." method="_on_add_condition_button_pressed"]
